@@ -1,4 +1,4 @@
-/* $Id: scores.c,v 1.3.2.1 2003-05-30 09:26:32 btb Exp $ */
+/* $Id: scores.c,v 1.3.2.2 2003-05-30 21:20:20 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -272,7 +272,6 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #include "joy.h"
 #include "timer.h"
 #include "text.h"
-#include "d_io.h"
 #include "strutil.h"
 
 #define VERSION_NUMBER 		1
