@@ -1,5 +1,9 @@
 2003-05-30  Bradley Bell  <btb@icculus.org>
 
+	* include/d_io.h, include/physfsx.h, main/inferno.c,
+	main/newdemo.c, main/scores.c, misc/Makefile.am, misc/d_io.c: get
+	rid of d_io stuff.
+
 	* main/scores.c: use physfs for scores file
 
 	* main/playsave.c: improve player loading
